--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "aos": "^3.0.0-beta.6",
     "emailjs": "^5.0.0",
     "framer-motion": "^12.31.0",
     "gsap": "^3.14.2",
