--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@studio-freight/lenis": "^1.0.42",
     "aos": "^3.0.0-beta.6",
     "emailjs": "^5.0.0",
     "framer-motion": "^12.31.0",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
